progress in Display part of UML