@@ -18,7 +18,7 @@ public class MainWindow {
         // TODO we can split this constructor into multiple functions
         this.selectedFlight = flights.getFirst();
         this.selectedClient = clients.getFirst();
-        this.selectedTicket = this.selectedFlight.getTickets().get(0);
+        this.selectedTicket = this.selectedFlight.getTickets().getFirst();
         frame = new JFrame();
         frame.setTitle("Clients manager");
         JLabel clientLabel = new JLabel("Client");
